<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    tools:context=".RegistrationActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/Image"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:baselineAligned="false"
        android:text="𝑅𝑒𝑔𝒾𝓈𝓉𝓇𝒶𝓉𝒾☯𝓃 "
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="1dp"
        app:boxStrokeColor="@color/black">

        <EditText
            android:id="@+id/edRegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/blackuser"
            android:drawablePadding="18dp"
            android:ems="10"
            android:hint="Full Name"
            android:inputType="text"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/edGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/genders"
                android:drawablePadding="18dp"
                android:ems="10"
                android:hint="Gender "
                android:inputType="text"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/black">

        <EditText
            android:id="@+id/edAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/locations"
            android:drawablePadding="18dp"
            android:ems="10"
            android:hint="Address "
            android:inputType="text"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:maxLength="10">

        <EditText
            android:id="@+id/edmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/usermobile"
            android:drawablePadding="18dp"
            android:ems="10"
            android:hint="   Phone Number "
            android:inputType="phone"
            android:maxLength="10"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawablePadding="18dp"
            android:textSize="20sp"
            android:drawableStart="@drawable/userpasswordicon"
            android:inputType="textPassword"
            android:hint="  Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        app:boxStrokeColor="@color/black"
        app:endIconMode="password_toggle"
        android:layout_marginHorizontal="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawablePadding="18dp"
            android:textSize="20sp"
            android:drawableStart="@drawable/userpasswordicon"
            android:inputType="textPassword"
            android:hint="   Confirm Password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSingUP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="#0C0C01"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:text=" Sign Up" />

    </LinearLayout>

</ScrollView>